sumo/tests/jtrrouter/errors/Makefile.am
SUBDIRS =  false_net false_output no_input no_net no_output unknown_option

EXTRA_DIST =  input_flows.flows.xml input_net.net.xml testsuite.jtrrouter

